--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   
 
 </body>
-<script src="App.jsx" type="module"></script>
+<script src="App.jsx" ></script>
 <script src="https://cdn.jsdelivr.net/npm/short-unique-id@4.4.4/dist/short-unique-id.min.js"
         crossorigin="anonymous"></script>
 
